--- a/views/base.pug
+++ b/views/base.pug
@@ -2,9 +2,9 @@ doctype html
 html
     head
         if(title)
-            title=title + ' | SpaceX Boca Chica'
+            title=title + ' | SpaceBot'
         else
-            title=' | SpaceX Boca Chica'
+            title=' | SpaceBot'
         meta(charset="utf-8")
         meta(name="viewport", content="width=device-width, initial-scale=1")
         link(rel="shortcut icon", href="https://i.gyazo.com/3869e5bdf3052f267a8ce2c59fd049bb.png")
