--- a/views/today.pug
+++ b/views/today.pug
@@ -6,13 +6,13 @@ block scriptBlock
 
 block content
     div(style="display: flex; flex-direction: column; align-items: center;")
-        h2 Summary of today's activities in Boca Chica, TX
-        h6(style="position: relative; left: 50px; width: 200px;")
+        h2 Summary of today's activities in Starbase, TX
+        h6(style="position: relative; left: 50px; width: 215px;")
             span(style="position: absolute; left: -105px;") Local: 
             span#local
                 p=" "
-        h6(style="position: relative; left: 50px; width: 200px;")
-            span(style="position: absolute; left: -105px;") Boca Chica: 
+        h6(style="position: relative; left: 50px; width: 215px;")
+            span(style="position: absolute; left: -105px;") Starbase: 
             span#boca
                 p=" "
         span(style="font-size: 14px; font-weight: bold;") All times are auto-adjusted to your timezone.
