--- a/web/views/base.pug
+++ b/web/views/base.pug
@@ -75,11 +75,12 @@ html
     // Page content
     .content-bg
       block content
-    
-    div(style="display: flex; flex-direction: column; align-items: center; margin-bottom: 100px;")
-      div(style="width: min(calc(100% - 20px), 450px); margin-top: 45px;")
-        h5(style="text-align: justify; ") See our Discord to get automatic notications when things change!
-      iframe(src="https://discord.com/widget?id=800873041995104286&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts")
+
+    if !hideDiscord
+      div(style="display: flex; flex-direction: column; align-items: center; margin-bottom: 100px;")
+        div(style="width: min(calc(100% - 20px), 450px); margin-top: 45px;")
+          h5(style="text-align: justify; ") See our Discord to get automatic notications when things change!
+        iframe(src="https://discord.com/widget?id=800873041995104286&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts")
     
     .footer-bg
       
